# buber-dinner

./: .env.example  Cargo.toml  README.md
application/: Cargo.toml
application/src/: lib.rs
application/src/authentication/: mod.rs
application/src/authentication/commands/: mod.rs  register_command.rs
application/src/authentication/queries/: login_query.rs  mod.rs
application/src/common/: interfaces.rs  mod.rs
application/src/common/interfaces/: authentication.rs  services.rs
application/src/persistence/: user_repository.rs
application/src/services/: authentication.rs
docs/: domain_models.md
docs/domain_models/: aggregates_menu.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/common/: mod.rs  value_objects.rs
domain/src/common/errors/: authentication_error.rs  error_codes.rs  mod.rs  validation_error.rs
domain/src/common/models/: aggregate_root.rs  entities.rs  mod.rs  value_object.rs
domain/src/dinner/: value_objects.rs
domain/src/entities/: mod.rs  user.rs
domain/src/host/: value_objects.rs
domain/src/menu/: entities.rs  mod.rs  value_objects.rs
domain/src/menu_review/: value_objects.rs
domain/src/user/: mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/authentication/: jwt_settings.rs  jwt_token_generator.rs  jwt_token_manager.rs  mod.rs
infrastructure/src/persistence/: mod.rs  user_inmemory_repository.rs
infrastructure/src/services/: date_provider.rs  mod.rs
presentation/api/: Cargo.toml
presentation/api/src/: lib.rs  main.rs
presentation/api/src/common/: dependency_injection.rs  env.rs  mod.rs
presentation/api/src/controllers/: authentication_controller.rs  dinners_controller.rs  mod.rs
presentation/api/src/errors/: app_error.rs  app_error_response.rs  mod.rs  problem.rs  validation_problem.rs
presentation/contracts/: Cargo.toml
presentation/contracts/src/: lib.rs
presentation/contracts/src/authentication/: authentication_response.rs  mod.rs  register_request.rs
requests/: hello.http
requests/authentication/: login.http  register.http
requests/dinners/: list_dinners.http
