# [package]
# name = "buber-dinner"
# version = "0.1.0"

[workspace]
members = [
    "domain",
    "application",
    "infrastructure",
    "presentation/contracts",
    "presentation/api",
]

[workspace.package]
edition = "2021"
authors = ["SOCGNA Childéric <socgnachilderic@proton.me>"]
description = "Food Api"
readme = "./README.md"

[workspace.dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
