[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
serde = { version = "1.0.147", features = ["derive"] }
