[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-web-httpauth = "0.8.0"
application = { path="../../application" }
contracts = { path="../contracts" }
domain = { path="../../domain" }
dotenvy = "0.15.6"
futures-util = "0.3.25"
infrastructure = { path="../../infrastructure" }
mime = "0.3.16"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
